Experimenting with Merriweather as the font due to readability issues with Eleni on certain Windows based browsers (Chrome)

--- a/less/microcosm-fonts.less
+++ b/less/microcosm-fonts.less
@@ -1,33 +1,4 @@
-/* Elena - Licensed font and cannot be shipped */
-
-@font-face {
-	font-family: 'elena-web';
-	src: url('/static/fonts/Elena/400.eot'); /* IE9 Compat Modes */
-	src: url('/static/fonts/Elena/400.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		url('/static/fonts/Elena/400.woff') format('woff'); /* Modern Browsers */
-}
-@font-face {
-	font-family: 'elena-web';
-	src: url('/static/fonts/Elena/400italic.eot'); /* IE9 Compat Modes */
-	src: url('/static/fonts/Elena/400italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		url('/static/fonts/Elena/400italic.woff') format('woff'); /* Modern Browsers */
-	font-style: italic;
-}
-@font-face {
-	font-family: 'elena-web';
-	src: url('/static/fonts/Elena/700.eot'); /* IE9 Compat Modes */
-	src: url('/static/fonts/Elena/700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		url('/static/fonts/Elena/700.woff') format('woff'); /* Modern Browsers */
-	font-weight: bold;
-}
-@font-face {
-	font-family: 'elena-web';
-	src: url('/static/fonts/Elena/700italic.eot'); /* IE9 Compat Modes */
-	src: url('/static/fonts/Elena/700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		url('/static/fonts/Elena/700italic.woff') format('woff'); /* Modern Browsers */
-	font-weight: bold;
-	font-style: italic;
-}
+@import url(//fonts.googleapis.com/css?family=Merriweather:700,400,400italic,700italic);
 
 /* Source Sans Pro - Open source font and can be shipped */
 
