--- a/less/variables.less
+++ b/less/variables.less
@@ -53,12 +53,12 @@
 
 @font-family-display:     source-sans-pro, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 @font-family-sans-serif:  source-sans-pro, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-@font-family-serif:       elena-web, Elena, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+@font-family-serif:       "Merriweather", elena-web, Elena, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          20px;
-@font-size-comment:       18px;
+@font-size-comment:       16px;
 @font-size-large:         ceil((@font-size-base * 1.2)); // ~24px
 @font-size-medium:        ceil((@font-size-base * 1)); // ~20px
 @font-size-small:         ceil((@font-size-base * 0.8)); // ~16px
@@ -73,7 +73,7 @@
 
 @line-height-base:        1.5; // 30/20
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~30px
-@line-height-comment:     28px;
+@line-height-comment:     ceil((@font-size-comment * 1.5));
 
 @headings-font-family:    @font-family-display;
 @headings-font-weight:    700;
